# robotics-stack

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PROJECT_PLAN.txt  README-zh.md  README.md  docker-compose.yml  pyproject.toml
.tmp-tests-cli-run/: frame_metadata.json  global_cloud.ply  poses.json  scene_graph.json  summary.json  trace.json
.tmp-tests-cli-run/frames/: frame_000_depth.npy  frame_001_depth.npy
apps/: README-zh.md  README.md  capture_mujoco_rgbd.py  replay_trace.py  run_benchmark.py  run_mujoco_dual_view.py  run_mujoco_mapping.py  run_mujoco_move_to_point.py  run_mujoco_panda_gripper.py  run_mujoco_smoke.py  run_mujoco_viewer.py  run_task.py  run_task_vlm.py
configs/: controller.yaml
configs/tasks/: t1_reach.yaml  t2_force_hold.yaml  t3_wipe.yaml
control/: __init__.py  force_mode.py  impedance.py  kinematics.py  safety.py
docs/: architecture.md  benchmark_protocol.md  dev_log_2026-04-21.md  development_plan_zh.md  rgbd_mapping_grounding_architecture.md  task_schema.md  toolchain.md
envs/: __init__.py  mujoco_env.py
envs/scenes/: panda_table.xml
eval/: README-zh.md  README.md  __init__.py  metrics.py  plots.py  report.py  run_trials.py
eval/benchmarks/: tabletop_v0.json
interfaces/: README-zh.md  README.md  __init__.py  common.py  control_feedback.py  execution_trace.py  grounding.py  mapping.py  perception.py  scene_graph.py  skill_spec.py  task_spec.py  vlm.py  world_state.py
modules/: README-zh.md  README.md  __init__.py
modules/control/: README-zh.md  README.md  __init__.py  backend.py  executor.py  mujoco_gripper_driver.py  mujoco_target_driver.py
modules/grounding/: README-zh.md  README.md  __init__.py  grounder.py
modules/planner/: README-zh.md  README.md  __init__.py  planner.py
modules/skills/: README-zh.md  README.md  __init__.py  library.py
modules/task_parser/: README-zh.md  README.md  __init__.py  parser.py  prompts.py
modules/vlm/: __init__.py  backends.py  capture.py  prompts.py  service.py
modules/world_model/: README-zh.md  README.md  __init__.py  map_fuser.py  map_store.py  rgbd_backprojector.py  scene_graph_builder.py  state_store.py
planning/: __init__.py  primitives.py  task_graph.py  trajectory.py
scripts/: demo_t1.sh  demo_t2.sh  demo_t3.sh  setup.sh  test.sh
sim/: README-zh.md  README.md
sim/assets/franka_emika_panda/: README-zh.md  panda.xml
sim/scenes/: mujoco_mapping_panda.xml  mujoco_minimal.xml
tests/: test_mapping_interfaces.py  test_mujoco_gripper_driver.py  test_mujoco_mapping.py  test_mujoco_target_driver.py  test_pipeline.py  test_smoke.py  test_task_parser_llm.py  test_vlm.py
