[project]
name = "robotics-manipulation"
version = "0.1.0"
description = "模块化机器人操作系统 - 从高层任务描述到底层执行控制"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Robotics Team" }
]
keywords = ["robotics", "manipulation", "mujoco", "control", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心依赖
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "dataclasses-json>=0.6.0",

    # 日志
    "structlog>=24.0.0",

    # 测试
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",

    # 可选：MuJoCo 仿真 (后期添加)
    # "mujoco>=3.0.0",
    # "mujoco-python-viewer>=0.3.0",
]

[project.optional-dependencies]
# 仿真依赖
sim = [
    "mujoco>=3.0.0",
    "mujoco-python-viewer>=0.3.0",
]
# 视觉依赖 (后期添加)
vision = [
    "opencv-python>=4.8.0",
    "open3d>=0.17.0",
]
# 规划依赖 (后期添加)
planning = [
    "networkx>=3.0",
]
# 开发依赖
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/robotics-manipulation"
Documentation = "https://github.com/your-org/robotics-manipulation/docs"
Repository = "https://github.com/your-org/robotics-manipulation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules", "interfaces", "integration"]

# Ruff 配置
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["interfaces", "modules", "integration"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
